--- a/Assignment_5/styles.css
+++ b/Assignment_5/styles.css
@@ -1,6 +1,15 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #202020;
+    color: #e3e3e3;
 }
 form > * {
     margin: 10px;
+}
+input {
+    background-color: darkgoldenrod;
+    color: black;
+}
+table th {
+    border-left: solid 1px white;
 }
