--- a/Capstone/capstone.css
+++ b/Capstone/capstone.css
@@ -4,10 +4,19 @@ CS460 - JavaScript Programming
 Simple CSS changes to make the webpage "dark mode"
 Little other corrective changes to improve layout
 */
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
 body > * {
     margin: 10px;
 }
-
+h1 {
+    text-align: center;
+}
+#textStats {
+    border: 1px black solid;
+    padding: 10px;
+}
 input {
     width: 95%;
 }
